# Semantic_mapping

./: README.md
smapping/: README.md  map2.yaml
smapping/.catkin_tools/profiles/release/: devel_collisions.txt
smapping/src/mir_robot/: README.md
smapping/src/mir_robot/mir_gazebo/launch/: mir_autonomous.launch
smapping/src/mir_robot/mir_gazebo/maps/map_office_with_objects/: map.yaml
smapping/src/mir_robot/mir_navigation/rviz/: navigation.rviz
smapping/src/sem_mapping/NeuralNet/tensorflow_object_detector/data/labels/: open_images.pbtxt
smapping/src/sem_mapping/col_semmapping/cfg/: prior knowledge.yaml
smapping/src/sem_mapping/col_semmapping/src/: col_semmapping_node.cpp
smapping/src/sem_mapping/mapping_msgs/: package.xml
smapping/src/sem_mapping/semmapping/include/: semanticmap.h
smapping/src/sem_mapping/semmapping/maps/: exp1_world.yaml  truth_map_well_arranged_world.yaml
smapping/src/sem_mapping/semmapping/src/: mapping.cpp  semanticmap.cpp
smapping/src/trajectory_follower/: CMakeLists.txt  package.xml  trajectory_duration.txt
smapping/src/trajectory_follower/config/: trajectoires.yaml
smapping/src/trajectory_follower/launch/: trajectory_follower.launch
smapping/src/trajectory_follower/src/: trajectory_follower_node.cpp
