<?xml version="1.0"?>
<package format="2">
  <name>mapping_msgs</name>
  <version>0.1.0</version>
  <description>The mapping_msgs package</description>

  <maintainer email="tobias.zaenker@aalto.fi">Tobias Zaenker</maintainer>
  <license>BSD</license>
  <author email="tobias.zaenker@aalto.fi">Tobias Zaenker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>

  <!-- Export tag -->
  <export>
  </export>
</package>
